# bevy-test

./: Cargo.toml
src/: asset_loader.rs  asteroids.rs  collision_detection.rs  debug.rs  despawn.rs  main.rs  movement.rs  plugins.rs  schedule.rs  spaceship.rs  state.rs  tile.rs
src/plugins/: camera.rs  cube_plugin.rs  life.rs  life_plugin.rs  mod.rs
